examples/scenarios/zero-trust-broken-connectivity/manifests/30-policy-set-b.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy-set-b
  namespace: storefront
spec:
  endpointSelector:
    matchLabels:
      app: web-frontend
  egressDeny:
  - toEntities:
    - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy-set-b
  namespace: orders
spec:
  endpointSelector:
    matchLabels:
      app: orders-worker
  egressDeny:
  - toEntities:
    - world
